# rocketpeer-mono-old

./: .gitignore  Cargo.toml  README  docker-compose.yml  example.env  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile  configuration.yaml  dockerfile
backend/.cargo/: config.toml
backend/configuration/: base.yaml
backend/migrations/: 0001_test.sql  20230419090043_initial_migration.sql  20230623132340_db_creates_uuid_for_user_id.sql  20230623135519_set_defaults_for_user_enums.sql
backend/openapi/: schema.yaml
backend/prisma/: schema.prisma
backend/scripts/: init_db.sh
backend/src/: configuration.rs  lib.rs  main.rs  prisma.rs  routes.rs  startup.rs
backend/src/global_routes/: health_check.rs
backend/src/routes/: health_check.rs  json_structs.rs  mod.rs  types.rs  user.rs
backend/src/routes/server_related/: server.rs
backend/src/routes/user_related/: access_tokens.rs  messages.rs  mod.rs  users.rs
backend/src/types/: mod.rs  user_types.rs  user_types_impl.rs
backend/src/user_routes/: helper.rs  mod.rs  user.rs
django/: dockerfile  requirements.txt
django/app/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
django/app/migrations/: 0001_initial.py
django/app/models/: customer.py
django/app/views/: customer.py
express/: index.ts  package.json  tsconfig.json
public/locales/: de.json  en.json
rust/: Cargo.toml  dockerfile
rust/.cargo/: config.toml
rust/prisma/: schema.prisma
rust/src/: main.rs  prisma.rs
rust/src/routes/: json_structs.rs  mod.rs
rust/src/routes/server_related/: mod.rs
rust/src/routes/user_related/: access_tokens.rs  mod.rs  users.rs
schema_parser/: Cargo.toml
schema_parser/src/: main.rs  schema.d.ts  schema.prisma  testfile.txt
src-tauri/: package.json  tauri.conf.json
sveltekit/: .dockerignore  dockerfile  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  vite.config.ts
sveltekit/src/: app.d.ts  app.html  app.postcss  database.d.ts  store.ts
sveltekit/src/components/: ChatMessage.svelte  ChatView.svelte  DeveloperTools.svelte  Logo.svelte  MusicPlayer.svelte  TextChannel.svelte  VideoPlayer.svelte  VoiceChannel.svelte
sveltekit/src/components/branding/: Font.svelte  Logo.svelte
sveltekit/src/components/controls/: Button.svelte  Checkbox.svelte  DeveloperTools.svelte  Navigation.svelte  NavigationGroup.svelte  NavigationItem.svelte  Overlay.svelte  PictureInput.svelte  Slider.svelte  TextInput.svelte  VideoPlayer.svelte  VoiceConnection.svelte
sveltekit/src/components/general/: Alert.svelte  (+5 more)
sveltekit/src/lib/: api.ts  countries.d.ts  countries.ts  enum.ts  helpers.ts  http.ts  i18n.ts  navigation.ts  theme.ts  time.ts  use.ts  validate.ts  viewSize.ts  webcam.ts
sveltekit/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts
sveltekit/src/style/: header.postcss  layout.postcss  list.postcss  text.postcss
webhook/: index.php  update.sh
(+97 files in other folders)
