[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
serde = { version = "1.0.159", features = ["derive"] }
actix-web-actors = "4.2.0"
actix = "0.13.0"
chrono = "0.4.24"
jsonwebtoken = "8.3.0"
