[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.159", features = ["derive"]}
tide = "0.16.0"
tokio = {version = "1.27.0", features = ["macros", "rt-multi-thread"]}
femme = "2.2.1"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql", "macros"] }
dotenv = "0.15.0"
clap = { version = "4.2.1", features = ["derive"] }
utoipa = "3.2.1"
utoipa-swagger-ui = "3.1.3"
serde_json = "1.0.95"
