[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5" }
rand = "0.8.5"
rocket = "0.5.0-rc.2"
serde = "1.0.157"
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full"]}
